pathfinder/tests/BugDay_2005-11-09_0.9.3/Tests/xquery_crashtest.SF-1207048.stable.err
stderr of test 'xquery_crashtest.SF-1207048` in directory 'tests/BugDay_2005-11-09_0.9.3` itself:


# 14:58:42 >  
# 14:58:42 >  Mtimeout -timeout 180 Mserver "--config=/ufs/zhang/scratch/monet-stable/program/etc/MonetDB.conf" --debug=10 --set "monet_mod_path=/ufs/zhang/scratch/monet-stable/program/lib/MonetDB" --set "gdk_dbfarm=/ufs/zhang/scratch/monet-stable/program/var/MonetDB/dbfarm" --set "sql_logdir=/ufs/zhang/scratch/monet-stable/program/var/MonetDB/log" --set mapi_port=32401 --set sql_port=44187 --set xquery_port=57716 --set monet_prompt= --trace "--dbname=mTests_tests_BugDay_2005-11-09_0.9.3" --dbinit="module(pathfinder); pfstart();" ; echo ; echo Over..
# 14:58:42 >  

# builtin opt 	config = ${prefix}/etc/MonetDB.conf
# builtin opt 	gdk_arch = 64bitx86_64-redhat-linux-gnu
# builtin opt 	gdk_version = 4.9.3
# builtin opt 	monet_pid = 7877
# builtin opt 	prefix = /ufs/zhang/scratch/monet-stable/program
# builtin opt 	exec_prefix = ${prefix}
# builtin opt 	gdk_dbname = tst
# builtin opt 	gdk_dbfarm = ${prefix}/var/MonetDB
# builtin opt 	gdk_debug = 8
# builtin opt 	gdk_mem_bigsize = 137438953472
# builtin opt 	gdk_vm_minsize = 137438953472
# builtin opt 	gdk_alloc_map = yes
# builtin opt 	monet_admin = adm
# builtin opt 	monet_prompt = >
# builtin opt 	monet_welcome = yes
# builtin opt 	monet_mod_path = ${exec_prefix}/lib/MonetDB:${exec_prefix}/lib/bin
# builtin opt 	monet_daemon = yes
# builtin opt 	host = localhost
# builtin opt 	mapi_port = 50000
# builtin opt 	mapi_noheaders = no
# builtin opt 	mapi_debug = 0
# builtin opt 	mapi_clients = 2
# builtin opt 	sql_port = 45123
# builtin opt 	sql_debug = 0
# builtin opt 	sql_user = monetdb
# builtin opt 	sql_schema = sys
# builtin opt 	sql_logdir = ${prefix}/var/MonetDB/log
# config opt 	prefix = /ufs/zhang/scratch/monet-stable/program
# config opt 	exec_prefix = ${prefix}
# config opt 	gdk_dbfarm = ${prefix}/var/MonetDB/dbfarm
# config opt 	gdk_dbname = demo
# config opt 	gdk_alloc_map = no
# config opt 	gdk_embedded = no
# config opt 	gdk_debug = 0
# config opt 	monet_admin = adm
# config opt 	monet_prompt = MonetDB>
# config opt 	monet_welcome = yes
# config opt 	monet_mod_path = ${exec_prefix}/lib/MonetDB:${exec_prefix}/lib/bin
# config opt 	monet_daemon = no
# config opt 	mapi_port = 50000
# config opt 	mapi_debug = 0
# config opt 	sql_port = 45123
# config opt 	sql_debug = 0
# config opt 	sql_logdir = ${prefix}/var/MonetDB/log
# config opt 	xquery_port = 45789
# config opt 	pf_httpd_port = 8080
# config opt 	xquery_output = dm
# config opt 	xquery_cacheMB = 100
# cmdline opt 	config = /ufs/zhang/scratch/monet-stable/program/etc/MonetDB.conf
# cmdline opt 	gdk_debug = 10
# cmdline opt 	monet_mod_path = /ufs/zhang/scratch/monet-stable/program/lib/MonetDB
# cmdline opt 	gdk_dbfarm = /ufs/zhang/scratch/monet-stable/program/var/MonetDB/dbfarm
# cmdline opt 	sql_logdir = /ufs/zhang/scratch/monet-stable/program/var/MonetDB/log
# cmdline opt 	mapi_port = 32401
# cmdline opt 	sql_port = 44187
# cmdline opt 	xquery_port = 57716
# cmdline opt 	monet_prompt = 
# cmdline opt 	gdk_dbname = mTests_tests_BugDay_2005-11-09_0.9.3

# 14:58:44 >  
# 14:58:44 >  Mtimeout -timeout 60 MapiClient -lxquery -sxml -u monetdb -P monetdb --host=localhost --port=57716 xquery_crashtest.SF-1207048.xq
# 14:58:44 >  

MAPI  = monetdb@localhost:39248
QUERY = string(string(string(string(string(string(string(string(string(string( string(string(string(string(string(string(string(string(string(string(
ERROR = !fatal error: aborted too deep recursion
        !# halted in /ufs/manegold/_/scratch0/Monet/Testing/Current/source/pathfinder/compiler/semantics/normalize.brg (reduce), line 711

# 11:14:48 >  
# 11:14:48 >  Done.
# 11:14:48 >  

